[gd_scene load_steps=4 format=3 uid="uid://crn7mx7njbtm5"]

[ext_resource type="Script" path="res://core/scenes/menus/options_menu/mini_options_menu.gd" id="1_rbiqv"]
[ext_resource type="PackedScene" uid="uid://diadf82rojwk3" path="res://core/scenes/menus/options_menu/option_control/slider_option_control.tscn" id="2_7nlgd"]
[ext_resource type="PackedScene" uid="uid://dgel5wjtgckfu" path="res://core/scenes/menus/options_menu/option_control/toggle_option_control.tscn" id="3_s5g8c"]

[node name="MiniOptionsMenu" type="VBoxContainer"]
custom_minimum_size = Vector2(400, 260)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -130.0
offset_right = 200.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbiqv")
audio_control_scene = ExtResource("2_7nlgd")

[node name="AudioControlContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MuteControl" parent="." instance=ExtResource("3_s5g8c")]
unique_name_in_owner = true
layout_mode = 2
option_name = "Mute"
option_section = 1
key = "Mute"
section = "AudioSettings"

[node name="FullscreenControl" parent="." instance=ExtResource("3_s5g8c")]
unique_name_in_owner = true
layout_mode = 2
option_name = "Fullscreen"
option_section = 2
key = "Fullscreen"
section = "VideoSettings"

[connection signal="setting_changed" from="MuteControl" to="." method="_on_mute_control_setting_changed"]
[connection signal="setting_changed" from="FullscreenControl" to="." method="_on_fullscreen_control_setting_changed"]
